@@ -2,6 +2,8 @@
 
 	* lib/rubygems.rb: Patch for RUBY_FRAMEWORK for OS X 10.5.  Patch
 	submitted by Laurent Sansonetti.
+	* lib/rubygems.rb: cygwin, djgpp, mingw are Windows platforms.  Fixes
+	bug #15537 by Roger Pack.
 
 2007-11-11  Eric Hodel  <drbrain@segment7.net>
 
